<?xml version="1.0"?>
<package format="3">
  <name>libpcl-all-gpu-dev</name>
  <version>0.1.0</version>
  <description>Wraps the PCL library for use in a ROS 2 workspace as libpcl-all-gpu-dev.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake</depend>
  <depend>ament_cmake_target_dependencies</depend>
  <depend>ament_package</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>