<?xml version="1.0"?>
<package format="3">
  <name>libpcl-all-gpu-dev</name>
  <version>0.1.0</version>
  <description>Wraps the PCL library for use in a ROS 2 workspace as libpcl-all-gpu-dev.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <depend>libboost-all-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>libflann-dev</depend>
  <depend>libopenni2-dev</depend>
  <depend>libvtk9-dev</depend>
  <depend>libqhull-dev</depend>
  <depend>libusb-1.0-0-dev</depend>
</package>